<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">WP target debug</string>
    <string name="speeds_header">Speeds Status</string>    
    <string name="X">X:</string>
    <string name="Y">Y:</string>
    <string name="d">d:</string>
    <string name="robotOrient">Robot orientation (degrees):</string>
    <string name="battery_level">Battery:</string>
	<string name="left_speed_txt">L (mm/s):</string>
	<string name="right_speed_txt">R (mm/s):</string>
	<string name="init_value">0</string>
	<string name="robot_status_header">Robot Status</string>
	<string name="emptyString"/>
	<string name="initialState">Waiting start...</string>
	<string name="weblink">www.wheelphone.com</string>
	<string name="camOffset_header">Camera offset</string>
	<string name="targets_header">Targets Status</string>
	<string name="robotDisconnected">Disconnected</string>
	<string name="minTime">min (ms):</string>
	<string name="maxTime">max (ms):</string>
	<string name="markerId">Marker id (0..49):</string>
	<string name="speed_control">Speed control</string>
	<string name="soft_accel">Soft acceleration</string>
	<string name="cpuUsage">cpu:</string>
	<string name="ramUsage">ram:</string>
	<string name="currTime">current (ms):</string>
	<string name="avgTime">average (ms):</string>
	<string name="phone_status_header">Phone Status</string>
	<string name="robotTargetAngle">Robot - target angle (degrees):</string>
</resources>
